--- a/4. js兼容性/4-3. babel插件/.babelrc
+++ b/4. js兼容性/4-3. babel插件/.babelrc
@@ -6,11 +6,12 @@
         }]
     ],
     "plugins": [
-        ["@babel/plugin-proposal-class-properties", {
+        ["@babel/proposal-class-properties", {
             "loose": true
         }],
-        "@babel/plugin-proposal-function-bind",
-        "@babel/plugin-proposal-optional-chaining",
-        "transform-remove-console"
+        "@babel/proposal-function-bind",
+        "@babel/proposal-optional-chaining",
+        "transform-remove-console",
+        "@babel/transform-runtime"
     ]
 }
