--- a/4. js兼容性/4-3. babel插件/package.json
+++ b/4. js兼容性/4-3. babel插件/package.json
@@ -14,10 +14,12 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-function-bind": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "babel-plugin-transform-remove-console": "^6.9.4"
   },
   "dependencies": {
+    "@babel/runtime": "^7.8.4",
     "core-js": "^3.6.4",
     "regenerator-runtime": "^0.13.3"
   }
