--- a/5. 性能优化/5-3. 优化loader性能/package.json
+++ b/5. 性能优化/5-3. 优化loader性能/package.json
@@ -12,9 +12,11 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "babel-loader": "^8.0.6",
+    "cache-loader": "^4.1.0",
     "core-js": "^3.6.4",
     "lodash": "^4.17.15",
     "regenerator-runtime": "^0.13.3",
+    "thread-loader": "^2.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   }
