--- a/5. 性能优化/5-5. 手动分包/package.json
+++ b/5. 性能优化/5-5. 手动分包/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "dev": "webpack",
     "dll": "webpack --config webpack.dll.config.js"
   },
   "author": "",
